fixed overflowing width on contact flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,6 @@ header {
   background-repeat: no-repeat;
   margin: 10px;
   cursor: hand;
-  border-radius: 5%;
   border: 3px solid var(--dull-white);
   display: grid;
 }
@@ -214,8 +213,6 @@ header {
   background-color: var(--dull-white);
   color: var(--not-too-black);
   position: absolute;
-  right: -50px;
-  top: 100px;
   padding: 25px;
   max-width: 550px;
   z-index: 100;
@@ -223,12 +220,23 @@ header {
 }
 
 /* Contact section (nested flexbox) styles */
-#contactOptions {
+.contactOptionsFlexbox {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  margin: auto;
+  font-size: 30px;
 }
+
+/* I want the contact options links to remain white in every state */
+.contactOption:link    {color:white;}
+.contactOption:visited {color:white;}
+.contactOption:hover   {color:white;}
+.contactOption:active  {color:white;} 
 
 /* Footer styles */
 footer {
+  display: inline-block;
+  background-color: green;
   text-align: center;
 }
